style: fix page top spacing

--- a/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_default.css
+++ b/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_default.css
@@ -3,6 +3,10 @@
     --backgroundColor: #f9f9f9;
 }
 
+#layout_content {
+    padding: 0;
+}
+
 /**
  * Sections
  */
@@ -21,5 +25,7 @@ section:last-of-type {
  */
 section .layout_content_inner.cf > h1,
 section .layout_content_inner.cf > .blog > h1 {
+    margin-top: 0;
+
     font-size: 2em;
 }
